--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@
     src: url("roboto/Roboto-Regular.ttf");
 }
 
+@media screen and (max-width: 700px) {
+    #ssnInput, #nameInput {
+        width: 75%;
+    }
+
+    #addText {
+        font-size: 1.4em !important;
+    }
+}
+
 body {
     margin: 0px;
     background-image: url("images/skyline.jpg");
@@ -132,7 +142,7 @@ body {
     margin-left: 50px;
     margin-top: 30px;
     height: 30px;
-    width: 500px
+    width: 500px;
 }
 
 .radioButtons {
